pom maven is fixed