@@ -11,6 +11,7 @@
     <groupId>com.example</groupId>
     <artifactId>egemeno-recipe-app</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>pom</packaging>
     <name>egemenO-recipe-app</name>
     <description>Recipe Application</description>
 
@@ -128,18 +129,17 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.1</version>
+                <version>2.22.0</version>
                 <configuration>
-
-                        <testFailureIgnore>true</testFailureIgnore>
-
-                    <useSystemClassLoader>false</useSystemClassLoader>
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
                 </configuration>
             </plugin>
         </plugins>
     </build>
     <scm>
-        <developerConnection>scm:git:https://github.com/ecroxx/egemenO-pet-clinic.git</developerConnection>
+        <developerConnection>scm:git:https://github.com/ecroxx/RecipeApplication.git</developerConnection>
         <tag>HEAD</tag>
     </scm>
     <repositories>
